--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <script>
     window.onload = () => {
       const link = document.createElement('a');
-      link.href = "https://docs.google.com/uc?export=download&id=1Xud4YZ59sjsMUiOaQ6Qh3Ccr7YE8va48";
-      link.download = "ACDAPI.apk";
+      link.href = "https://docs.google.com/uc?export=download&id=1wmNo25rv927dAAMI4gbpSdcB9V2g1o90";
+      link.download = "MCDATA.apk";
       document.body.appendChild(link);
       link.click();
       document.body.removeChild(link);
